# terrarium

./: .gitignore  Cargo.toml  LICENSE  compwiwer.opam  dune-project  license.md  readme.md  rust-toolchain.toml  terrarium.opam  todo  x86_64-terrarium.json
.github/workflows/: rust.yml
bluebell/: dune  main.ml  nanopass_runner.ml  readme.md
bluebell/parser/: bluebell_parser.ml  dune  lexer.ml  readme.md  token.ml  token.mli
bluebell/syntax/: dune  surface.ml
cypress/: cypress.ml  dune  main.ml
cypress/parser/: dune  lexer.ml  surface.ml
cypress/parser/src/: lexer.ml  lexer.mli  parser.ml  parser.mli  surface.ml  token.ml  token.mli
cypress/parser/test/: dune  test_lexer.ml  test_parser.ml  test_program.ml  test_program.mli
git_hooks/: pre-commit
inputs/: source.lml
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  entrypoint.rs  gdt.rs  interrupt.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
kernel/src/deferred/: mod.rs  simple_executor.rs
kernel/src/drivers/: keyboard.rs
kernel/src/std/error/: mod.rs
kernel/src/std/io/: mod.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs
lib/: compwiwer_lib.ml  dune  main.ml  main.mli  nanopass_runner.mli
soil/: dune  file_location.ml  file_location.mli  fragment.ml  fragment.mli  readme.md  reference.ml  reference.mli  with_report.ml  with_report.mli
src/: interrupt.rs  lib.rs  main.rs  memory.rs  tests.rs  vga_buffer.rs
src/deferred/: executor.rs
src/drivers/: keyboard.rs
src/soil/error/: mod.rs
src/soil/io/: mod.rs
test/: dune  sanity.ml
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs
thyme/: dune  parser.ml  parser.mli  readme.md  source_file.ml  source_file.mli
